Додано маршрут для реєстрації користувача на послугу
